# client_autoscribe

./: .gitignore  CLIENT_AUTOSCRIBE_DOCUMENTATION.md  README.md  autoscribe_listener.py  ca_gunicorn.conf.py  client_autoscribe.conf  client_autoscribe_api.py  client_autoscribe_api_v2.py  client_autoscribe_config.py  client_autoscribe_db.py  client_autoscribe_db_v2.py  client_autoscribe_to_catalogix.py  client_autoscribe_to_catalogix_cron.py  client_autoscribe_v2.conf  client_autoscribe_v2_misc.conf  client_autoscribe_worker.py  client_autoscribe_worker_v2.py  copy_brand_configs.py  copy_custom_rules_v2.py  count_category.py  custom_rules.py  custom_rules_v2.py  daily_teams_message.py  find_errors.py  fix_empty_live.py  fix_output_data_issue.py  google_bucket_writer.py  grupo_soma_data_extractor.py  grupo_soma_push_fix.py  gunicorn.conf.py  just.json  listener_db.py  manage_api.sh  migrate_data.py  migrate_data2.py  ontology_db.py  print_brand_config.py  pyproject.toml  recompute_live.py  reporting.py  (+18 more)
integrations/: Opening lines & Style tip (New Website).xlsx  Opening lines & Style tip (New Website)_v1_old.xlsx  abfrl_lbrd_prod.py  abfrl_test.py  base_adapter.py  demo_vendor.py  farfetch.py  fashion_attributes_table_2021_08_05__12_31_25_UTC.parquet.gzip  fashion_attributes_table_2021_08_11__11_39_38_UTC.parquet.gzip  grupo_soma.py  linea_directa_test.py  pantaloons_descriptions.xlsx  sanli.py  streamoid.py  tatacliq.py  tatacliq1.py
templates/: catalogix_dashboard.html  catalogix_review_v2.html  create_vendor.html  dashboard.html  dashboard_v2.html  product.html  (+14 more)
